--- a/templates/calculate/days_list.html
+++ b/templates/calculate/days_list.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link rel="preconnect" href="https://fonts.googleapis.com/" />
     <style data-styled="active" data-styled-version="5.3.6"></style>
-    <title>ZhirStop - Получите свой персональный план по похудению!</title>
+    <title>Excellent Enbody</title>
       <link rel="stylesheet" href="{% static 'css/styles.css' %}" />
     <link rel="stylesheet" href="{% static 'css/reset.css' %}" />
   </head>
